# fastzero

./: .coverage  .env  .gitignore  Dockerfile  local.yaml  local.yml  pyproject.toml
fastzero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fastzero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 2ec7603e0e65_1.py  3322571d3cdb_1.py  59d778b9606d_create_users_table.py  c6b67be28835_user_updated_at.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
tests/factories/: todo_factory.py  user_factory.py
tests/test_auth.py/: test_token.py
tests/test_todos/: test_todo_create.py  test_todo_delete.py  test_todo_list.py  test_todo_update.py
tests/test_users/: test_user_create.py  test_user_delete.py  test_user_list.py  test_user_read.py  test_user_update.py
