[tool.poetry]
name = "fastzero"
version = "0.1.0"
description = ""
authors = ["Juan Felipe <juan.fll@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
pydantic = {extras = ["email"], version = "^2.1.1"}
sqlalchemy = "^2.0.19"
pydantic-settings = "^2.0.2"
alembic = "^1.13.1"
coverage = "^7.6.0"
psycopg2-binary = "^2.9.9"
psycopg = "^3.2.1"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
pythonpath = "."

[tool.blue]
extend-exclude = '(migrations/)'

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
taskipy = "^1.11.0"
blue = "^0.9.1"
ruff = "^0.0.280"
httpx = "^0.24.1"
isort = "^5.12.0"

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue .  && isort .'
up = 'docker compose -f local.yaml up'
down = "docker compose -f local.yaml down"
build = "docker compose -f local.yaml build"
show = "docker compose -f local.yaml run --rm fastzero_app python -m poetry show"
add = 'docker compose -f local.yaml run --rm fastzero_app python -m poetry add ${1}'
#pre_test = 'task lint'
test = 'docker compose -f local.yaml run --rm fastzero_app pytest -s -x --cov=fastzero -vv'
post_test = 'coverage html'
make_migrations = 'docker compose -f local.yaml run --rm fastzero_app alembic revision --autogenerate -m ${1}'
migrate = 'docker compose -f local.yaml run --rm fastzero_app alembic upgrade head'



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
